--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,55 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply text-2xl;
+  }
+  h2 {
+    @apply text-xl;
+  }
+}
+
+@layer components {
+  .todo-container {
+    @apply flex items-center justify-between p-4 border-b hover:bg-gray-50 transition-colors duration-200;
+  }
+
+  .checkbox-container {
+    @apply flex items-center space-x-2 cursor-pointer;
+  }
+
+  .checkbox {
+    @apply h-5 w-5 hover:cursor-pointer accent-indigo-500 focus:ring-indigo-200 focus:outline-none;
+  }
+
+  .title-container {
+    @apply flex items-center space-x-4;
+  }
+
+  .title-completed {
+    @apply text-lg transition-colors duration-200 line-through text-gray-400;
+  }
+
+  .title-not-completed {
+    @apply text-lg transition-colors duration-200 text-black;
+  }
+
+  .delete-button {
+    @apply bg-red-600 hover:bg-red-400 px-2 py-1 rounded-md text-white transition-colors duration-200;
+  }
+
+  .btn-blue {
+    @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+  }
+}
+
+@layer utilities {
+  .filter-none {
+    filter: none;
+  }
+  .filter-grayscale {
+    filter: grayscale(100%);
+  }
+}
